--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,7 +1,7 @@
-home = /usr
+home = /usr/bin
 implementation = CPython
-version_info = 3.9.2.final.0
-virtualenv = 20.4.0+ds
+version_info = 3.11.2.final.0
+virtualenv = 20.17.1+ds
 include-system-site-packages = false
 base-prefix = /usr
 base-exec-prefix = /usr
